@@ -1,3 +1,14 @@
+2012-11-15  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* configure.ac: Properly set MULTISUBDIR.
+	* asan/Makefile.am (gcc_version): New.
+	* interception/Makefile.am (gcc_version): Likewise.
+	* sanitizer_common/Makefile.am (gcc_version): Likewise.
+	* configure: Regenerated.
+	* asan/Makefile.in: Likewise.
+	* interception/Makefile.in: Likewise.
+	* sanitizer_common/Makefile.in: Likewise.
+
 2012-11-14  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR other/55291
